--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.16",
     "postcss-sort-media-queries": "^5.2.0",
     "sass": "^1.57.1",
+    "sharp": "^0.33.5",
     "svgo": "^3.3.2",
     "vite": "^5.4.6",
     "vite-plugin-full-reload": "^1.1.0",
@@ -30,6 +31,6 @@
   "dependencies": {
     "jquery": "^3.7.1",
     "normalize.css": "^8.0.1",
-    "slick-carousel": "^1.8.1"
+    "swiper": "^11.1.14"
   }
 }
