--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vite-plugin-image-optimizer": "^1.1.8"
   },
   "dependencies": {
+    "intl-tel-input": "^24.8.2",
     "jquery": "^3.7.1",
     "normalize.css": "^8.0.1",
     "swiper": "^11.1.14"
