--- a/package.json
+++ b/package.json
@@ -29,8 +29,13 @@
     "vite-plugin-image-optimizer": "^1.1.8"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "intl-tel-input": "^24.8.2",
     "jquery": "^3.7.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "normalize.css": "^8.0.1",
     "swiper": "^11.1.14"
   }
