--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "MFisher",
   "private": false,
   "version": "0.0.1",
-  "type": "module", cx
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/",
